add footer elements

--- a/study/test.html
+++ b/study/test.html
@@ -21,6 +21,17 @@
         </main>
         <footer class="footer">
             <p>Footer</p>
+            <h2>Popular Features</h2>
+            <ul>
+                <li>Gyms near me</li>
+                    <ul>
+                        <li>Gyms in London</li>
+                        <li>Gyms in Cardiff</li>
+                        <li>Gyms in Glasgow</li>
+                    </ul>
+                <li>Personal trainers</li>
+                <li>Gym membership deals & offers</li>
+            </ul>
         </footer>
     </div>
 </body>
