add initial css-grid setup

--- a/study gym/test.html
+++ b/study gym/test.html
@@ -30,7 +30,7 @@
                         <li>Gyms in Glasgow</li>
                     </ul>
                 <li>Personal trainers</li>
-                <li>Gym membership deals & offers</li>
+                <li>Gym membership deals /& offers</li>
             </ul>
         </footer>
     </div>
