--- a/study youtube/youtube.html
+++ b/study youtube/youtube.html
@@ -4,13 +4,14 @@
     </head>
 
     <body>
-        <div class="container"></div>
-        <header class="header"></header>
-
-        <div class="left-menu"></div>
-        <main class="main"></main>
-        <div class="right-menu"></div>
-
-        <footer class="footer"></footer>
+        <div class="container">
+            <header class="header">HEADER</header>
+    
+            <div class="left-menu">LEFT</div>
+            <main class="main">MAIN</main>
+            <div class="right-menu">RIGHT</div>
+    
+            <footer class="footer">FOOTER</footer>
+        </div>
     </body>
 </html>
