update website exercise

--- a/study website/website.html
+++ b/study website/website.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="/study youtube/youtube.css">
+        <link rel="stylesheet" href="/study website/website.css">
     </head>
 
     <body>
