update html autotext

--- a/study exercise/exercise.html
+++ b/study exercise/exercise.html
@@ -1,6 +1,8 @@
+<!DOCTYPE HTML >
 <html>
     <head>
         <link rel="stylesheet" href="/study exercise/exercise.css">
+        <title>Exercise</title>
     </head>
 
     <body>
