--- a/study website/website.html
+++ b/study website/website.html
@@ -1,6 +1,8 @@
+<!DOCTYPE HTML >
 <html>
     <head>
         <link rel="stylesheet" href="/study website/website.css">
+        <title>website</title>
     </head>
 
     <body>
