add media queries

--- a/study youtube/youtube.html
+++ b/study youtube/youtube.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/study youtube/youtube.css">
 </head>
 <body>
@@ -9,7 +10,18 @@
         <div class="left-menu">LEFT</div>
         <div class="top-menu">TOP</div>
         <div class="main">
-            <div class="popular">POPULAR</div>
+            <div class="popular">
+                <div>VIDEO 1</div>
+                <div>VIDEO 2</div>
+                <div>VIDEO 3</div>
+                <div>VIDEO 4</div>
+                <div>VIDEO 5</div>
+                <div>VIDEO 6</div>
+                <div>VIDEO 7</div>
+                <div>VIDEO 8</div>
+                <div>VIDEO 9</div>
+                <div>VIDEO 10</div>
+            </div>
             <div class="shorts">SHORTS</div>
             <div class="trending">TRENDING</div>
         </div>
