add all html elements

--- a/exercises/linkedout/linkedin.html
+++ b/exercises/linkedout/linkedin.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Linkedout</title>
+    <link rel="stylesheet" href="linkedin.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="top-menu">TOP</div>
+        <div class="left-menu">LEFT</div>
+        <div class="main">MAIN</div>
+        <div class="right-menu">RIGHT</div>
+    </div>
 </body>
 </html>
