--- a/exercises/linkedout/linkedin.html
+++ b/exercises/linkedout/linkedin.html
@@ -10,7 +10,11 @@
     <div class="container">
         <div class="top-menu">TOP</div>
         <div class="left-menu">LEFT</div>
-        <div class="main">MAIN</div>
+        <div class="main">
+            <div class="info">INFO</div>
+            <div class="create-post">CREATE</div>
+            <div class="feed">FEED</div>
+        </div>
         <div class="right-menu">RIGHT</div>
     </div>
 </body>
