add left menu sub elements

--- a/exercises/linkedout/linkedin.html
+++ b/exercises/linkedout/linkedin.html
@@ -9,7 +9,10 @@
 <body>
     <div class="container">
         <div class="top-menu">TOP</div>
-        <div class="left-menu">LEFT</div>
+        <div class="left-menu">
+            <div>PROFILE</div>
+            <div>GROUPS</div>
+        </div>
         <div class="main">
             <div class="info">INFO</div>
             <div class="create-post">CREATE</div>
