--- a/exercises/linkedout/linkedin.html
+++ b/exercises/linkedout/linkedin.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="top-menu">TOP</div>
+        <div class="top-menu">
+            <div>SEARCH</div>
+            <div>NAVBAR</div>
+            <div>PREMIUM</div>
+        </div>
         <div class="left-menu">
             <div>PROFILE</div>
             <div>GROUPS</div>
