--- a/exercises/linkedout/linkedin.html
+++ b/exercises/linkedout/linkedin.html
@@ -22,7 +22,10 @@
             <div class="create-post">CREATE</div>
             <div class="feed">FEED</div>
         </div>
-        <div class="right-menu">RIGHT</div>
+        <div class="right-menu">
+            <div>NEWS</div>
+            <div>APP</div>
+        </div>
     </div>
 </body>
 </html>
