--- a/exercises/linkedout/linkedin.html
+++ b/exercises/linkedout/linkedin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linkedout</title>
+    <title>LinkedOut</title>
     <link rel="stylesheet" href="linkedin.css">
 </head>
 <body>
