add initial discord html layout

--- a/exercises/discord/discord.html
+++ b/exercises/discord/discord.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Discord</title>
+    <link rel="stylesheet" href="discord.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="left-menu">LEFT</div>
+        <div class="server-menu">SERVER-MENU
+            <div class="info">info</div>
+            <div class="invite">invite</div>
+            <div class="channel-menu">channels</div>
+        </div>
+        <div class="top-menu">TOP-MENU</div>
+        <div class="chat">CHAT</div>
+        <div class="message">MESSAGE</div>
+    </div>
 </body>
 </html>
