add subgrids for the server-menu

--- a/exercises/discord/discord.html
+++ b/exercises/discord/discord.html
@@ -9,10 +9,15 @@
 <body>
     <div class="container">
         <div class="left-menu">LEFT</div>
-        <div class="server-menu">SERVER-MENU
+        <div class="server-menu">
             <div class="info">info</div>
             <div class="invite">invite</div>
-            <div class="channel-menu">channels</div>
+            <div class="channel-menu">
+                <div>CHANNEL</div>
+                <div>CHANNEL</div>
+                <div>CHANNEL</div>
+                <div>CHANNEL</div>
+            </div>
         </div>
         <div class="top-menu">TOP-MENU</div>
         <div class="chat">CHAT</div>
