add inner grid for subfolders on left side

--- a/exercises/gmail/gmail.html
+++ b/exercises/gmail/gmail.html
@@ -11,7 +11,31 @@
         <div class="logo">LOGO</div>
         <div class="search">SEARCH</div>
         <div class="account">ACCOUNT</div>
-        <div class="folders">FOLDERS</div>
+        <div class="folders">
+            <div class="compose">
+                <p>Compose</p>
+            </div>
+            <div class="sub-folders">
+                <p>Inbox</p>
+                <p>Starred</p>
+                <p>Snoozed</p>
+                <p>Important</p>
+                <p>Sent</p>
+                <p>Team</p>
+                <p>New FRPs</p>
+                <p>Projects</p>
+                <p>Personal</p>
+                <p>More</p>
+                <p>Meet</p>
+                <p>Start a Meeting</p>
+                <p>Join a Meeting</p>
+                <p>Chat</p>
+                <p>name1</p>
+                <p>name2</p>
+                <p>name3</p>
+                <p>name4</p>
+            </div>
+        </div>
         <div class="mail">MAIL</div>
         <div class="right-menu">
             <div class="settings">SETTINGS</div>
