update subfolder and mail grids to autofit all p elements

--- a/exercises/gmail/gmail.html
+++ b/exercises/gmail/gmail.html
@@ -36,7 +36,36 @@
                 <p>name4</p>
             </div>
         </div>
-        <div class="mail">MAIL</div>
+        <div class="mail">
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+            <p>New E-Mail</p>
+        </div>                  
         <div class="right-menu">
             <div class="settings">SETTINGS</div>
             <div class="apps">APPS</div>
