add quick settings menu

--- a/exercises/gmail/gmail.html
+++ b/exercises/gmail/gmail.html
@@ -67,7 +67,19 @@
             <p>New E-Mail</p>
         </div>                  
         <div class="right-menu">
-            <div class="settings">SETTINGS</div>
+            <div class="settings">
+                <p>Quick Settings</p>
+                <p>See all settings!</p>
+                <p>Density
+                    <br>
+                    <input type="radio" name="same" checked="checked"> Default
+                    <br>
+                    <input type="radio" name="same"> Comfortable
+                    <br>
+                    <input type="radio" name="same"> Compact
+                    <br>
+                </p>
+            </div>
             <div class="apps">APPS</div>
         </div>
     </div>
